@@ -1,3 +1,7 @@
+2006-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
+	* Fix non persistent content being available to add to nodes, networks and content groups.
+	* Prevent a user from entering the same language twice in a langstring.  Fixes #226
+	
 2006-09-06 Benoit Grégoire  <bock@step.polymtl.ca>
 	* Fix #63
 	* Fix problem with my Splash only user fix (I used match on the user_id instead of the username).
